2005-07-24 16:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPrivate.h: Removed GormOutlineView.h from the
	includes.

2005-07-24 16:31 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Call selectRow: method.
	* GormCore/GormOutlineView.[hm]: Added new selectRow: method.
	Corrects bug#13754.

2005-07-24 12:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Eliminated [Gorm finishLaunching] and moved default
	initialization code to init before paletteManager is called so
	that the palette window is placed correctly.
	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Added override for 
	saveFrameUsingName: to prevent saving the position of windows
	during testing in Gorm's defaults.
	* Resources/Defaults.plist: Added defaults for Inspector, Palettes,
	and Preferences windows so that they appear at a reasonable position
	on the screen when Gorm is first used.  Corrects bug#13780.

2005-07-24 11:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Readded override of
	orderWindow:relativeTo:.  This corrects bug#13838.

2005-07-23 18:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Remove extra revert: call.
	* GormLib/IBInspector.m: Touch changes the inspector X to the broken
	X, per specs.
	* Gorm.m: [Gorm testInterface] fix for menu disappearance when
	testing the interface.
	* Palettes/0Menus/main.m: Added to authors list.

2005-07-23 10:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* Documentation/Makefile.postamble: Create documentation
	for GormCore, GormObjCHeaderParser and GormPrefs.

2005-07-21  fabien  <fabien@sonappart.net>

	* Palettes/0Menus/GormMenuInspectors.m : Corrects bug #13872 

2005-07-20 23:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m