@@ -1,3 +1,10 @@
+2005-07-25 23:26 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormClassEditor.m: [GormClassEditor selectClass:editClass:]
+	add exception handling.
+	* GormCore/GormDocument.m: [GormDocument pasteObjects:type
+	fromPasteboard:] added check for specific pb types.
+
 2005-07-24 16:43 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormPrivate.h: Removed GormOutlineView.h from the
